[package]
name = "steam-workshop-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0"
color-eyre = "0.6"
fs-err = "3.0"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-utils = { git = "https://github.com/nozwock/tracing-utils.git", version = "0.1.0" }
clio = { version = "0.3", features = ["clap-parse"] }
steamworks = "0.11.0"
ignore = "0.4.23"
better_default = "1.0.5"
serde = { version = "1.0.217", features = ["derive"] }
confy = "0.6.1"
tempfile = "3.15.0"
relative-path = "1.9.3"
# symlink = "0.1.0"
